<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/arkaplann"
    tools:context=".MainActivity">
    <EditText
        android:id="@+id/editTextText"
        android:layout_width="286dp"
        android:layout_height="66dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="216dp"
        android:drawableLeft="@drawable/baseline_person_outline_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/editText"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="288dp"
        android:layout_height="59dp"
        android:layout_alignStart="@+id/editTextText"
        android:layout_alignEnd="@+id/editTextText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="321dp"
        android:layout_marginEnd="0dp"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="15dp"
        android:hint="@string/editTextPassword"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/button"
        android:layout_width="284dp"
        android:layout_height="68dp"
        android:layout_alignStart="@+id/editTextTextPassword"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="227dp"
        android:backgroundTint="@color/button"
        android:text="@string/button"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white" />


    <Button
        android:id="@+id/button2"
        android:layout_width="284dp"
        android:layout_height="68dp"
        android:layout_alignStart="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="125dp"
        android:backgroundTint="@color/button"
        android:text="@string/button2"
        android:textColor="@color/white"
        android:textColorHighlight="@color/button"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="261dp"
        android:layout_height="125dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="71dp"
        android:layout_marginTop="85dp"
        android:contextClickable="false"
        android:hint="@string/editText2"
        android:includeFontPadding="false"
        android:text="@string/editText2"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#36472B"
        android:textColorHighlight="@color/ust"
        android:textColorHint="@color/ust"
        android:textSize="35dp"/>

</RelativeLayout>