<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/arkaplan"
    tools:context=".KayitOlActivity">

    <TextView
        android:id="@+id/baslıkKayit"
        android:layout_width="wrap_content"
        android:layout_height="118dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/baslıkKayit"
        android:text="Diyet Günlüğüm Kullanıcı Kayıt Formu"
        android:textAlignment="center"
        android:textColor="@color/button"
        android:textColorHighlight="@color/button"
        android:textColorHint="@color/button"
        android:textColorLink="@color/button"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/kullaniciAdi"
        android:layout_width="388dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="174dp"
        android:background="@drawable/kayitbackground"
        android:drawableLeft="@drawable/baseline_person_24"
        android:ems="10"
        android:hint="@string/kullaniciAdi"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black" />


    <EditText
        android:id="@+id/eposta"
        android:layout_width="388dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/kullaniciAdi"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="237dp"
        android:layout_marginEnd="-1dp"
        android:background="@drawable/kayitbackground"
        android:drawableLeft="@drawable/eposta"
        android:ems="10"
        android:hint="@string/eposta"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black" />

    <EditText
        android:id="@+id/yas"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/eposta"
        android:layout_alignEnd="@+id/eposta"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="-4dp"
        android:layout_marginBottom="380dp"
        android:background="@drawable/kayitbackground"
        android:drawableLeft="@drawable/yas"
        android:ems="10"
        android:hint="@string/yas"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black" />

    <EditText
        android:id="@+id/boy"
        android:layout_width="387dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginBottom="318dp"
        android:background="@drawable/kayitbackground"
        android:drawableLeft="@drawable/boy"
        android:ems="10"
        android:hint="@string/boy"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black" />

    <EditText
        android:id="@+id/kilo"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/boy"
        android:layout_alignEnd="@+id/boy"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="255dp"
        android:background="@drawable/kayitbackground"
        android:drawableLeft="@drawable/kilo"
        android:ems="10"
        android:hint="@string/kilo"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black" />

    <Button
        android:id="@+id/btnKayit"
        android:layout_width="239dp"
        android:layout_height="58dp"
        android:layout_alignStart="@+id/kilo"
        android:layout_alignEnd="@+id/kilo"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="47dp"
        android:backgroundTint="@color/button"
        android:hint="@string/btnKayit"
        android:text="Kayıt Ol"
        android:textColor="@color/white" />


    <EditText
        android:id="@+id/sifre"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/kilo"
        android:layout_alignEnd="@+id/kilo"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginBottom="191dp"
        android:background="@drawable/kayitbackground"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:ems="10"
        android:hint="@string/sifre"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black" />

    <EditText
        android:id="@+id/sifre2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/kilo"
        android:layout_alignEnd="@+id/kilo"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="-5dp"
        android:layout_marginBottom="125dp"
        android:background="@drawable/kayitbackground"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:ems="10"
        android:hint="@string/sifre2"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black" />

</RelativeLayout>