<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/button"
    tools:context=".HesabimFragment">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="578dp"
        android:layout_height="155dp"
        android:src="@drawable/hesabimtasarim"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvKullaniciAdi"
        android:layout_width="173dp"
        android:layout_height="68dp"
        android:layout_marginTop="32dp"
        android:text=""
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029" />


    <EditText
        android:id="@+id/tvEposta"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/kayitbackground"
        android:drawableLeft="@drawable/baseline_person_24"
        android:ems="10"
        android:hint="@string/eposta"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <EditText
        android:id="@+id/tvYas"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/kayitbackground"
        android:drawableLeft="@drawable/baseline_person_24"
        android:ems="10"
        android:hint="@string/yas"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.307" />

    <EditText
        android:id="@+id/tvBoy"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/kayitbackground"
        android:drawableLeft="@drawable/baseline_person_24"
        android:ems="10"
        android:hint="@string/boy"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.642" />

    <EditText
        android:id="@+id/tvKilo"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="248dp"
        android:background="@drawable/kayitbackground"
        android:drawableLeft="@drawable/baseline_person_24"
        android:ems="10"
        android:hint="@string/kilo"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <Button
        android:id="@+id/button6"
        android:layout_width="356dp"
        android:layout_height="53dp"
        android:text="ÇIKIŞ YAP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.872"
        android:backgroundTint="@color/button"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="121dp"
        android:layout_height="122dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/baseline_person_pin_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="42dp"
        android:layout_height="37dp"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.135" />

</androidx.constraintlayout.widget.ConstraintLayout>